--- a/styles-contact.css
+++ b/styles-contact.css
@@ -60,7 +60,7 @@ html, body {
   width: 100%;
   padding: 0;
   margin: 0;
-  background: url(images/Bricks_bg.jpg)
+  background: url(images/backround.ai)
 	center center fixed no-repeat;
 	background-size: cover;
 	
@@ -68,18 +68,20 @@ html, body {
 }
 
 .center {
-    width: 800px;
+	width: 80%; /*added this to make div responsive*/
+    max-width: 800px;
 	padding: 2%;
     margin: 100px auto;
- 	background: rgba(0, 150, 178, .75); /*this uses opacity of 75% for the background color*/
+ 	background: rgba(0, 150, 178, 0); /*this uses opacity of 0% for the background color*/
 	text-align: center;
-	border: 4px dashed white;
+	/*removed border*/
 }
 
    
 #logo {
-    margin-bottom: 16px;
-	border: 3px dashed red;
+    margin-bottom: 50px;
+	margin-top: 40px;
+	/*removed border*/
 	text-align: center;
 }
 
@@ -89,7 +91,7 @@ h1 {
 	font-style: normal;
 	font-size: 2em;
     margin: 0px auto 10px auto;
-    color: #fff;
+    color: #28787e;
 }
 
 h2 {
@@ -99,7 +101,7 @@ h2 {
 	font-style: normal;
 	font-size: 1.5em;
     line-height: 1.4;
-    color: #fff;
+    color: #28787e;
     padding: 0px 0px;
     margin: 0px auto 25px auto;
 }
@@ -110,7 +112,7 @@ p {
 	font-style: normal;	
 	font-size: 1.2em;
     line-height: 1.6;
-    color: #fff;
+    color: #28787e;
 }
 
 nav{
@@ -118,7 +120,7 @@ nav{
 	font-size: 1.2em;
 	width: 400px;
 	margin: 0 auto;
-	border: dashed turquoise;
+	border: solid #45b1b6;
 	border-width: 3px 0;
 	text-align: center;
 	margin-top: 2em;
@@ -132,13 +134,13 @@ nav a{
 	padding: 10px;
 	}
 a{
-	color: blueviolet;
+	color: #28787e;
 	text-decoration: none;
 	font-weight: bold;
 	}
 a:hover{
-	color:black;
-	background: pink;
+	color:#45b1b6;
+	background: #f9fae6;
 	}
     
     
