--- a/styles-contact.css
+++ b/styles-contact.css
@@ -60,7 +60,7 @@ html, body {
   width: 100%;
   padding: 0;
   margin: 0;
-  background: url(images/background@2x.png)
+  background: url(images/background.png)
 	center center fixed no-repeat;
 	background-size: cover;
 	
@@ -91,7 +91,7 @@ h1 {
 	font-style: normal;
 	font-size: 2em;
     margin: 0px auto 10px auto;
-    color: #28787e;
+    color: #f9fae6;
 }
 
 h2 {
