--- a/styles-contact.css
+++ b/styles-contact.css
@@ -139,8 +139,8 @@ a{
 	font-weight: bold;
 	}
 a:hover{
-	color:#45b1b6;
-	background: #f9fae6;
+	color:#f9fae6;
+	/*removed hover background color*/
 	}
     
     
