--- a/grc339/flexbox-basic-layout/flexbox.css
+++ b/grc339/flexbox-basic-layout/flexbox.css
@@ -52,7 +52,7 @@ p {
 
 footer {
 	flex: 1 0 100%;
-	margin: 0;
+	margin-top: 3em;
 	color: rgb(54 54 54);
 	padding-top: 1em;
 	border-top: solid 1px rgb(154 154 154);
