--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -15,7 +15,7 @@ div.container {
     max-width: 40em;
     position: relative;
     margin: 0 auto;
-    padding: 1em 0 0 1em;
+    padding: 1em 1em 0 1em;
     
 }
 
