--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -8,20 +8,23 @@ img {
 }
 
 figure {
-    margin: 1em 0 0.5em 0;
+    margin: 0em 0 0.5em 0;
     padding: 0;
 }
 
-div.container {
+div.container, div.home-container {
     max-width: 40em;
-    position: relative;
-    margin: 0 auto;
-    padding: 1em 1em 0 1em;
+    margin: auto
     
 }
 
+header {
+    margin: 1em .5em 0 .5em;
+}
+
 h1 {
-	width: 8em ;
+	width: 6em;
+    margin-top: 1em;
 }
 
 a {
@@ -32,51 +35,75 @@ h2 {
     color: rgb(68,99,135);
     font-family: serif;
     font-weight: bold;
+    margin: .2rem .5rem 0 .5rem;
 }
+
 
 section.secondary-story h2 {
     font-size: 1.5em;
 }
 
+section {
+    margin-bottom: 2em;
+}
+
 p {
     font-family: sans-serif;
     color: black;
-    padding-bottom: 0.25em;
-}
-
-section.secondary-story, section.tertiary-story p {
-    padding-bottom: 1.5em;
+    margin: .2rem .5rem 0 .5rem;
 }
 
 figcaption {
     color: gray;
     font-family: sans-serif;
     font-style: italic;
-    margin: 0.5em 0 1em 0;
+    margin: .2em 0 1em 0;
 }
 
 aside {
+    padding: 1rem .5rem 0 .5rem;
+    margin-top: 1em;
+}
+
+div.container aside {
     background-color: rgb(194,194,255);
 }
 
+nav {
+    margin-top: 1em;
+}
+
 nav ul li a {
-    color: rgb(68,99,135);
+    color:  rgb(68,99,135);
     font-family: sans-serif;
     font-weight: bold;
-    font-size: 1.2em;
 }
 
 nav ul li {
     padding-bottom: 0.25em;
 }
 
+nav ul li a:hover {
+    color: #f00;
+}
+
 nav ul {
     list-style-type: none;
-    padding: 1em 0 1em 0;
+    padding: 1rem 0 1rem 0;
+}
+
+article h2 {
+    font-size: 2.5em;
+    margin-top: 1em;
+    margin-bottom: .5em;
+}
+
+article p {
+    margin-bottom: 1em;
 }
 
 section.main-story h2 {
-    font-size: 3em;
+    font-size: 2.5em;
 }
 
 section.tertiary-story {
@@ -84,13 +111,21 @@ section.tertiary-story {
 }
 
 section.tertiary-story h2 {
-    padding-top: 0.5em;
+    padding: 0.5em 0 0 0;
     font-size: 1.1em;
+    margin: 0;
+}
+
+section.tertiary-story p {
+    margin: 0;
 }
 
 footer {
     background-color: rgb(68,99,135); 
-    padding: 1em;
+    padding: .5em;
+    width: 100%;
+    color: #eee;
+    box-sizing: border-box;
 }
 
 footer p {
@@ -105,6 +140,113 @@ footer p {
 
     nav ul li {
         display: inline-block;
-        padding-left: 1em;
+        padding-right: 1em;
+    }
+}
+
+@media only screen and (min-width: 60em){
+    
+    div.home-container {
+        max-width: 80em;
+        padding: 0 1em;
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+        grid-gap: 1em;
+    }
+
+    div.container {
+        max-width: 60em;
+        padding: 0 1em;
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+        grid-gap: 1em;
+    }
+
+    div.home-container aside {
+        background: none;
+        padding: 0;
+        margin-top: 0;
+    }
+
+    div.container aside {
+        margin-top: 0;
+    }
+
+    header, footer {
+        grid-column: 1/3;
+        padding: 0;
+    }
+
+    main {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 1em;
+    }
+
+    section.main-story {
+        grid-column: 2/4;
+        grid-row: 1/3;
+        display: flex;
+    }
+
+    section.main-story a {
+        display: flex;
+        flex: 1 0 12em;
+        flex-direction: column;
+    }
+
+    section.main-story a figure {
+        flex: 1 0 12em;
+        display: flex;
+    }
+
+    section.main-story a h2 {
+        flex: 0 0 1em;
+        margin-left: 0;
+    }
+
+    section.main-story a p {
+        flex: 0 0 auto;
+        margin-left: 0;
+        padding-bottom: 0;
+    }
+
+    section.main-story a figure img {
+        object-fit: cover;
+    }
+
+    section.secondary-story {
+        display: flex;
+    }
+
+    section.secondary-story a {
+        display: flex;
+        flex: 1 0 12em;
+        flex-direction: column;
+    }
+
+    section.secondary-story a figure {
+        flex: 1 0 12em;
+        display: flex;
+    }
+
+    section.secondary-story a h2 {
+        flex: 0 0 1em;
+        margin-left: 0;
+    }
+
+    section.secondary-story a p {
+        flex: 0 0 4em;
+        margin-left: 0;
+    }
+
+    section.secondary-story a figure img {
+        object-fit: cover;
+    }
+
+
+    section {
+        padding: 0 0 .5rem 0;
+        margin: 0;
     }
 }
