--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -2,6 +2,10 @@
 
 html, body, div, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit;}
 
+body {
+    background-color: rgb(253,248,238);
+}
+
 img {
     width: 100%;
     display: block;
@@ -23,7 +27,7 @@ header {
 }
 
 h1 {
-	width: 6em;
+	width: 12em;
     margin-top: 1em;
 }
 
@@ -32,9 +36,10 @@ a {
 }
 
 h2 {
-    color: rgb(68,99,135);
-    font-family: serif;
-    font-weight: bold;
+    color: rgb(50,117,133);
+    font-family: circe-slab-a, serif;
+    font-weight: 700;
+    font-style: normal;
     margin: .2rem .5rem 0 .5rem;
 }
 
@@ -47,36 +52,41 @@ section {
     margin-bottom: 2em;
 }
 
-p {
-    font-family: sans-serif;
-    color: black;
+p, li {
+    font-family: circe-slab-a, serif;
+    font-weight: 500;
+    font-style: normal;
+    color: rgb(0,0,0);
     margin: .2rem .5rem 0 .5rem;
 }
 
+ol {
+    margin: 0 0 .5rem .5rem;
+}
+
 figcaption {
-    color: gray;
+    color: rgb(240,115,47);
     font-family: sans-serif;
     font-style: italic;
     margin: .2em 0 1em 0;
 }
 
 aside {
-    padding: 1rem .5rem 0 .5rem;
+    padding: 0 .5rem 0 .5rem;
     margin-top: 1em;
 }
 
-div.container aside {
-    background-color: rgb(194,194,255);
-}
 
 nav {
     margin-top: 1em;
 }
 
 nav ul li a {
-    color:  rgb(68,99,135);
-    font-family: sans-serif;
-    font-weight: bold;
+    color:  rgb(224,96,126);
+    font-family: circe-slab-a, serif;
+    font-weight: 700;
+    font-style: normal;
+
 }
 
 nav ul li {
@@ -84,7 +94,7 @@ nav ul li {
 }
 
 nav ul li a:hover {
-    color: #f00;
+    color: rgb(193, 223, 124);
 }
 
 nav ul {
@@ -92,14 +102,22 @@ nav ul {
     padding: 1rem 0 1rem 0;
 }
 
+
 article h2 {
     font-size: 2.5em;
-    margin-top: 1em;
-    margin-bottom: .5em;
+    margin: 1em 0 0.5em 0;
+}
+
+h3 {
+    font-size: 1.5em;
+    font-family: circe-slab-a, serif;
+    font-weight: 600;
+    font-style: normal;
+    color: rgb(224,96,126);
 }
 
 article p {
-    margin-bottom: 1em;
+    margin: 0 0 1em 0;
 }
 
 section.main-story h2 {
@@ -107,7 +125,7 @@ section.main-story h2 {
 }
 
 section.tertiary-story {
-    border-top: 1px solid rgb(68,99,135);
+    border-top: 2px solid rgb(240,115,47);
 }
 
 section.tertiary-story h2 {
@@ -121,7 +139,7 @@ section.tertiary-story p {
 }
 
 footer {
-    background-color: rgb(68,99,135); 
+    background-color: rgb(50, 117, 133); 
     padding: .5em;
     width: 100%;
     color: #eee;
@@ -129,7 +147,7 @@ footer {
 }
 
 footer p {
-    color: white;
+    color: rgb(253,248,238);
 }
 
 
