--- a/grc339/digital-magazine/style.css
+++ b/grc339/digital-magazine/style.css
@@ -126,9 +126,6 @@ h3 {
     color: rgb(224,96,126);
 }
 
-/* article p {
-    margin: 0 0 1em 0;
-} */
 
 section.main-story h2 {
     font-size: 2.5em;
@@ -151,8 +148,6 @@ section.tertiary-story p {
 div.gallery body {
     font-family: sans-serif;
     line-height: 1.4em;
-    color: #222;
-    background-color: #ddd;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -171,7 +166,7 @@ div.gallery article {
 
 div.gallery figure {
     margin: 0;
-    width: calc(100%-2em);
+    width: 100%;
     position: absolute;
     opacity: 0;
     transition: opacity 0.5s;
@@ -200,7 +195,8 @@ div.subscribe {
     background-position: center;
     background-repeat: no-repeat;
     padding: calc(20% + 1em);
-    max-width: 100%
+    max-width: 100%;
+    grid-column: 1/3;
 }
 
 form {
@@ -227,6 +223,7 @@ section.personal-info ul li input[type="text"] {
 	display: block;
 	box-sizing: border-box;
     width: 100%;
+    background: #fafafa;
     border: 2px solid rgb(240,115,47);
     color: rgb(50, 117, 133); 
     padding: .25rem;
@@ -276,7 +273,7 @@ footer {
     background-color: rgb(50, 117, 133); 
     padding: .75rem .5rem .75rem .5rem;;
     width: 100%;
-    color: #eee;
+    color: rgb(253,248,238);
     box-sizing: border-box;
 }
 
@@ -321,7 +318,7 @@ footer p {
         display: block;
         overflow: hidden;
         position: relative;
-        max-width: 50%;
+        max-width: 100%;
         margin: auto;
     }
 
@@ -426,4 +423,96 @@ footer p {
         padding: 0 0 .5rem 0;
         margin: 0;
     }
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: rgb(34, 34, 34);
+    }
+
+    h1 {
+        background-image: url("logo-alt.svg");
+    }
+
+    header h1 img {
+        opacity: 0;
+    }
+
+    h2 {
+        color: rgb(144, 202, 249);
+    }
+
+    p, li {
+        color: rgb(253,248,238);
+    }
+
+    figcaption {
+        color: rgb(255, 171, 145);
+    }
+
+    nav ul li a {
+        color:  rgb(244, 143, 177);
+    }
+
+    nav ul li a:hover {
+        color: rgb(245, 245, 181);
+    }
+
+    h3 {
+        color: rgb(244, 143, 177);
+    }
+
+    section.tertiary-story {
+        border-top: 2px solid rgb(255, 171, 145);
+    }
+
+    form {
+        background-color:rgb(34, 34, 34);
+    }
+
+    textarea {
+        background: rgb(34, 34, 34);
+        border: 2px solid rgb(255, 171, 145);
+        color: rgb(144, 202, 249);
+    }
+    
+    section.personal-info ul li input[type="text"] {
+        border: 2px solid rgb(255, 171, 145);
+        color: rgb(144, 202, 249);
+        background: rgb(34, 34, 34); 
+    }
+
+    section.personal-info ul li select {
+        background-color: rgb(34, 34, 34);
+    }
+
+    section label[for = feedback] {
+        display: block;
+        font-family: circe-slab-a, serif;
+        font-weight: 500;
+        font-style: normal;
+        margin: 0 .5rem 0 .5rem;
+        color: rgb(253,248,238);
+    }
+    
+    button[type = subscribe] {
+        font-family: circe-slab-a, serif;
+        font-weight: 500;
+        font-style: normal;
+        color: rgb(0,0,0);
+        background-color: rgb(245, 245, 181);
+        margin: 0 .5rem 0 .5rem;
+    }
+
+    footer {
+    background-color: rgb(144, 202, 249); 
+    padding: .75rem .5rem .75rem .5rem;;
+    width: 100%;
+    color: rgb(34, 34, 34);
+    box-sizing: border-box;
+}
+
+footer p {
+    color: rgb(34, 34, 34);
+}
 }
